2016-10-12	Strip symbols simply by saying `-s'.  (3)

		share/innocent-pear/doge-01.cc ,
		share/innocent-pear/doge-99.cc ,
		share/innocent-pear/doge-i.h ,
		share/innocent-pear/doge-n.ld :
		- made "exported" internal symbols have hidden visibility,
		  especially under ELF

		share/innocent-pear/sleepier.cc :
		- removed needless string obfuscation...

		include/innocent-pear/rofl.h :
		- rofl_impl_syscall<...>::syscall_raw for ARM:
		  - gave it hidden visibility under ELF
		  - removed special-case code for g++ >= 5, since it still
		    makes the compiler error out anyway...

		include/innocent-pear/kthxbai.h :
		- added visibility("hidden") attribute to kthxbai_impl<...>
		  constructor, to try to prevent it from adding extra symbol
		  table entries for static `x2' variables

		include/innocent-pear/omg.h :
		- now invokes rofl<...>::time(.) with a (scrambled) non-null
		  pointer, since a syscall with a null pointer stands out
		  like a sore thumb in the binary output

		GNUmakefile :
		- now passes `-W' to `readelf'

		lolwutconf/ :
		- bumped to 4ad70fa697

2016-10-11	Strip symbols simply by saying `-s'.  (2)

		GNUmakefile ,
		bin/innocent-pear-front-end.tcc ,
		configure :
		- use `--strip-all' rather than `--strip-unneeded'

		lolwutconf/ :
		- bumped to 6aaf0e0fa7

2016-10-09	Strip symbols simply by saying `-s'.

		configure :
		- now looks for a `strip' or `*-strip' utility for target

		bin/innocent-pear-front-end.tcc :
		- if both `-Xinnocent-pear -doge' and `-s' are specified
		  during a link, now separately runs `strip'/`*-strip' after
		  doing its own postprocessing

		GNUmakefile :
		- added `-s' option for compilation of non-debug test-doge-*
		  test case binaries
		- now tries running `readelf -s' on all test-doge-* binaries
		- now defines innocent_pear_STRIP_FOR_TARGET when compiling
		  host-side utilities

		lolwutconf/ :
		- bumped to ad2e618ec6

2016-10-08	"When all else fails, read the instructions."  (2)
